Refactored Renko Data Computer and related classes